--- a/main.css
+++ b/main.css
@@ -16,7 +16,7 @@ body, .text-sm-1, .text-sm-2, .form-control, .btn.btn-primary,
 .c-bottom {
   position: absolute;
   bottom: 0;
-  font-size: 9px; }
+  font-size: 15px; }
 
 body {
   background-color: #E6EDEC; }
@@ -77,6 +77,9 @@ p a, p a:hover {
 .text-sm-2 {
   color: #717171;
   font-size: 15px; }
+
+.text-sm-3 {
+  font-size: 9px; }
 
 a, a:hover {
   font-weight: 700;
