--- a/main.scss
+++ b/main.scss
@@ -25,7 +25,7 @@ $clr-border: #979797;
 .c-bottom {
     position: absolute;
     bottom: 0;
-    font-size: 9px;
+    font-size: 15px;
 }
 
 body {
@@ -100,6 +100,11 @@ p a, p a:hover {
     color: $clr-grey;
     font-size: 15px;
 }
+
+.text-sm-3 {
+    font-size: 9px;
+}
+
 
 a,a:hover {
     font-weight: 700;
