--- a/main.scss
+++ b/main.scss
@@ -63,6 +63,11 @@ body {
 p a, p a:hover {
     color: $clr-black;
 }
+
+.pl-3 a, .pl-3 a:hover {
+    color: $clr-black;
+    font-weight: 400;
+}
 .contact {
     background-image: url(img/contact-img.png);
     background-position: inherit;
@@ -96,16 +101,44 @@ p a, p a:hover {
 }
 
 .text-sm-2 {
-    @extend %text-shared;
     color: $clr-grey;
     font-size: 15px;
 }
 
 .text-sm-3 {
     font-size: 9px;
+    line-height: 12px;
 }
 
+.navbar-light .navbar-nav .nav-link {
+    line-height: 50px;
+    color: $clr-blue-green;
+    font-size: 22px;
+    font-weight: 400;
+}
 
+.c-padding-footer {
+    padding-left: 30px;
+}
+
+.c-padding-3 {
+    padding-top: 120px;
+}
+
+.c-padding-4 {
+    padding-top: 75px;
+}
+/*.c-padding-right {
+padding-right: 30px;
+}*/
+
+.c-padding-col-1 {
+    padding-left: 30px;
+}
+
+.c-padding-col-2 {
+    padding-left: 20px;
+}
 a,a:hover {
     font-weight: 700;
     color: $clr-blue-green;
@@ -115,8 +148,8 @@ a,a:hover {
 p a span{
     color: $clr-black!important;
 }
-.img-shadow-1 {
-    box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.31);
+.img-shadow {
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
 }
 
 .input-group-append .btn {z-index: 0;}
@@ -156,7 +189,7 @@ p a span{
     background-color: $clr-btn;
     color: $clr-white;
     height: 2.5rem;
-    line-height: 25px;
+    line-height: 26px;
 }
 .custom-file-label {
     @extend %text-shared;
@@ -168,6 +201,28 @@ p a span{
 .c-height {
     height: 70px;
 }
+.c-div-height {
+    height: 270px;
+}
+.footer-margin {
+    margin-top: -57px;
+}
+.footer-margin-1 {
+    margin-top: -93px;
+}
+.c-padding-col {
+    padding-bottom: 4rem;
+}
+
+.img-1 {
+    background-image: url(img/img-1.png);
+    background-repeat: no-repeat;
+    max-width: 100%;
+    height: 230px;
+}
+/*.c-margin-left {
+margin-left: 115px;
+}*/
 .btn.btn-primary,
 .btn.btn-primary:hover,
 .btn.btn-primary:active,
@@ -180,5 +235,39 @@ p a span{
     color: $clr-white;
     font-family: $font-stack;
     height: 40px;
-    text-transform: uppercase;
+    line-height: 26px;
+}
+
+.btn-secondary, .show>.btn-secondary.dropdown-toggle, .btn-secondary:hover, .btn-secondary:not(:disabled):not(.disabled).active, .btn-secondary:not(:disabled):not(.disabled):active, .show>.btn-secondary.dropdown-toggle {
+    background-color: $clr-white;
+    border-color: $clr-black!important;
+    color: $clr-black;
+}
+
+@media (min-width: 1200px) {
+
+    /* .c-padding-right {
+    padding-right: 10px;
+}
+    .c-margin-left {
+    margin-left: 65px;
+}*/
+}
+
+@media (max-width: 991px) {
+    .c-padding-3 {
+        padding-top: 50px;
+    }
+    .c-padding-4 {
+        padding-top: 78px!important;
+    }
+}
+
+@media (max-width: 767px) {
+    .c-padding-4 {
+        padding-top: 20px!important;
+    }
+    .c-padding-col-2 {
+        padding-left: 0px;
+    }
 }
