--- a/main.css
+++ b/main.css
@@ -26,10 +26,13 @@ body {
 
 .navbar-light .navbar-brand, .navbar-light .navbar-brand:hover {
   font-size: 42px;
-  color: #227B88;
+  color: #227B88 !important;
   letter-spacing: -1.17px;
   font-weight: 700;
   line-height: normal; }
+
+.navbar-light .navbar-nav .nav-link:hover {
+  color: #227B88; }
 
 .c-margin {
   margin-top: -70px; }
@@ -101,9 +104,9 @@ p a, p a:hover {
 .c-padding-4 {
   padding-top: 75px; }
 
-/*.c-padding-right {
-padding-right: 30px;
-}*/
+.c-padding-right {
+  padding-right: 15px; }
+
 .c-padding-col-1 {
   padding-left: 30px; }
 
@@ -211,24 +214,32 @@ margin-left: 115px;
   border-color: #000 !important;
   color: #000; }
 
-@media (min-width: 1200px) {
-    /* .c-padding-right {
-    padding-right: 10px;
-}
-    .c-margin-left {
-    margin-left: 65px;
-}*/ }
+@media (max-width: 1199px) {
+  .c-padding-col {
+    padding-bottom: .25rem; }
+
+  .c-padding-right {
+    padding-right: 0px; } }
 @media (max-width: 991px) {
   .c-padding-3 {
     padding-top: 50px; }
 
   .c-padding-4 {
-    padding-top: 78px !important; } }
+    padding-top: 78px !important; }
+
+  .c-padding-col {
+    padding-bottom: 0rem; }
+
+  .c-div-height {
+    height: 200px; } }
 @media (max-width: 767px) {
   .c-padding-4 {
     padding-top: 20px !important; }
 
   .c-padding-col-2 {
-    padding-left: 0px; } }
+    padding-left: 0px; }
+
+  .c-div-height {
+    height: 250px; } }
 
 /*# sourceMappingURL=main.css.map */
