--- a/main.css
+++ b/main.css
@@ -231,7 +231,13 @@ margin-left: 115px;
     padding-bottom: 0rem; }
 
   .c-div-height {
-    height: 200px; } }
+    height: 200px; }
+
+  .c-padding-right {
+    padding-left: 30px; }
+
+  .c-padding-left {
+    padding-left: 1.2rem; } }
 @media (max-width: 767px) {
   .c-padding-4 {
     padding-top: 20px !important; }
