--- a/main.scss
+++ b/main.scss
@@ -267,6 +267,10 @@ margin-left: 115px;
     .c-div-height {
         height: 200px;
     }
+    .c-padding-right {
+        padding-left: 30px;
+    }
+    .c-padding-left {padding-left: 1.2rem;}
 }
 
 @media (max-width: 767px) {
